--- a/build.gradle
+++ b/build.gradle
@@ -31,6 +31,8 @@ dependencies {
 	compile('javax.xml.bind:jaxb-api')
 	compile('org.springframework.boot:spring-boot-starter-security')
 	compile('org.springframework.security.oauth.boot:spring-security-oauth2-autoconfigure:2.0.0.RELEASE')
+	compile('org.springframework.session:spring-session-jdbc')
+	compile("org.springframework.boot:spring-boot-starter-thymeleaf")
 }
 
 test {
