--- a/package.json
+++ b/package.json
@@ -10,17 +10,23 @@
     "start": "webpack-dev-server"
   },
   "dependencies": {
+    "@mdi/js": "^4.7.95",
     "@stomp/stompjs": "^5.4.2",
+    "material-design-icons-iconfont": "^5.0.1",
     "sockjs-client": "^1.4.0",
     "vue": "^2.6.11",
     "vue-resource": "^1.5.1",
-    "vue-template-compiler": "^2.6.11"
+    "vue-template-compiler": "^2.6.11",
+    "vuetify": "^2.2.1"
   },
   "devDependencies": {
     "@babel/core": "^7.7.7",
     "@babel/preset-env": "^7.7.7",
+    "@mdi/font": "^4.7.95",
     "babel-loader": "^8.0.6",
+    "css-loader": "^3.4.0",
     "vue-loader": "^15.8.3",
+    "vue-style-loader": "^4.1.2",
     "webpack": "^4.41.5",
     "webpack-cli": "^3.3.10",
     "webpack-dev-server": "^3.10.1"
