--- a/build.gradle
+++ b/build.gradle
@@ -34,6 +34,7 @@ dependencies {
 	compile('org.springframework.session:spring-session-jdbc')
 	compile("org.springframework.boot:spring-boot-starter-thymeleaf")
 	compile("org.springframework.boot:spring-boot-starter-websocket")
+	compile ('org.jsoup:jsoup:1.12.1')
 }
 
 test {
